feat: added subtitle to Authorization.tsx

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -50,6 +50,7 @@
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
   "settings.authorization.title": "Anmeldung beim ONLYOFFICE DocSpace-Konto",
+  "settings.authorization.subtitle.address": "",
   "settings.authorization.status.authorized": "Sie haben sich erfolgreich bei Ihrem ONLYOFFICE DocSpace-Konto angemeldet.",
   "settings.authorization.inputs.email": "E-Mail",
   "settings.authorization.inputs.password": "Passwort",
@@ -63,6 +64,8 @@
   "settings.connection.disconnection.ok": "Verbindung zu ONLYOFFICE DocSpace erfolgreich unterbrochen",
   "settings.connection.disconnection.error": "Die Verbindung zu ONLYOFFICE DocSpace konnte nicht unterbrochen werden.",
   "settings.connection.title": "Konfigurieren Sie die Verbindungseinstellungen der ONLYOFFICE DocSpace-App",
+  "settings.connection.subtitle.connect": "",
+  "settings.connection.subtitle.change": "",
   "settings.connection.inputs.address": "Adresse von ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.title": "",
   "settings.connection.inputs.api-key.description": "",
