--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -52,6 +52,7 @@
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
   "settings.authorization.title": "Connexion au compte ONLYOFFICE DocSpace",
+  "settings.authorization.subtitle.address": "",
   "settings.authorization.status.authorized": "Vous vous êtes connecté avec succès à votre compte ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Mot de passe",
