--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -52,6 +52,7 @@
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
   "settings.authorization.title": "Faça login na conta do ONLYOFFICE DocSpace",
+  "settings.authorization.subtitle.address": "",
   "settings.authorization.status.authorized": "Você fez login com sucesso na sua conta do ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Senha",
