added fr, it. pt-BR, ru

--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -1,26 +1,24 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Une erreur s'est produite",
+  "background.error.title.docspace-invalid-api-key": "La clé de l'API de ONLYOFFICE DocSpace n'est pas valide.",
   "background.error.title.token-expired": "Le jeton de sécurité du document a expiré",
   "background.error.title.create-room": "Désolé, vous n'avez pas l'autorisation de créer des salles",
   "background.error.title.no-room-access": "Malheureusement, vous n'avez pas accès à cette salle",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Pas encore disponible",
+  "background.error.title.unreached": "Impossible à joindre",
+  "background.error.title.webhook.is-not-installed": "Avertissement de synchronisation",
+  "background.error.subtitle.common": "Impossible de récupérer les paramètres du plugin. Veuillez recharger la fenêtre Pipedrive.",
+  "background.error.subtitle.token-expired": "Le jeton de sécurité du document a expiré. Veuillez réautoriser l'application.",
   "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible.",
   "background.error.subtitle.plugin.not-active.help": "Veuillez patienter jusqu'à ce qu'un administrateur Pipedrive configure les paramètres de l'application",
   "background.error.subtitle.docspace-connection": "Vous n'êtes pas connecté à ONLYOFFICE DocSpace.",
-  "background.error.subtitle.docspace-authorization.message": "Impossible d'obtenir une autorisation dans ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Veuillez vous rendre sur la page des paramètres d'autorisation pour configurer les paramètres de l'application ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Veuillez demander à un administrateur Pipedrive de créer une salle ou contacter un administrateur DocSpace pour augmenter votre rôle.",
   "background.error.subtitle.no-room-access": "Veuillez essayer de demander un accès",
   "background.error.hint.admin.docspace-connection": "Veuillez consulter les paramètres de connexion pour configurer les paramètres de l'application ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "La synchronisation entre les suiveurs de Deal et les membres de salle ne s'effectue pas en raison d'un dysfonctionnement du webhook.",
   "button.reauthorize": "Re-autoriser",
-  "button.settings": "",
+  "button.settings": "Accéder aux paramètres",
   "button.create.room": "Créer une salle",
   "button.login": "Se connecter",
   "button.logout": "Déconnexion",
@@ -30,7 +28,7 @@
   "button.cancel": "Annuler",
   "button.save": "Enregistrer",
   "button.request-access": "Demander l'accès",
-  "button.reinstall": "",
+  "button.reinstall": "Réinstaller l'application",
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible.",
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
@@ -45,31 +43,31 @@
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
   "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour travailler avec les documents liés à cette affaire. Vous ne pourrez pas modifier le type de salle.",
-  "room.login.description": "",
+  "room.login.description": "Connectez-vous à ONLYOFFICE DocSpace pour collaborer facilement sur les documents liés à l'opération",
   "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "L'autorisation d'ONLYOFFICE DocSpace a été supprimée avec succès",
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
   "settings.authorization.title": "Connexion au compte ONLYOFFICE DocSpace",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "Votre adresse DocSpace connectée est",
   "settings.authorization.status.authorized": "Vous vous êtes connecté avec succès à votre compte ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace n'est pas joignable",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Clé de l'API de DocSpace invalide, veuillez réessayer",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Le propriétaire de la clé API de DocSpace n'est pas un administrateur DocSpace",
   "settings.connection.saving.ok": "Les paramètres d'ONLYOFFICE DocSpace ont été sauvegardés",
   "settings.connection.disconnection.description": "Souhaitez-vous déconnecter ONLYOFFICE DocSpace ? Cela entraînera la perte de toutes les connexions entre Deals et les salles DocSpace. De plus, toutes les données d'autorisation de l'utilisateur seront supprimées",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace a été déconnecté avec succès",
   "settings.connection.disconnection.error": "Impossible de déconnecter ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurez les paramètres de connexion de l'application ONLYOFFICE DocSpace",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Connectez votre ONLYOFFICE DocSpace à Pipedrive",
+  "settings.connection.subtitle.change": "Changez d'adresse ou déconnectez votre ONLYOFFICE DocSpace de Pipedrive",
   "settings.connection.inputs.address": "Adresse d'ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.description": "",
+  "settings.connection.inputs.api-key.title": "Clé de l'API de ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.description": "La clé API doit être créée par un administrateur de DocSpace et doit inclure les champs d'accès suivants : Profil (lecture), Contacts (écriture) et Salles (écriture).",
   "settings.connection.menu-item": "Connexion"
 }
