--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -1,26 +1,24 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Qualcosa è andato storto",
+  "background.error.title.docspace-invalid-api-key": "La chiave API di ONLYOFFICE DocSpace non è valida.",
   "background.error.title.token-expired": "Il token di sicurezza del documento è scaduto",
   "background.error.title.create-room": "Spiacenti, non hai l'autorizzazione per creare stanze",
   "background.error.title.no-room-access": "Siamo spiacenti, non hai accesso a questa stanza",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Non ancora disponibile",
+  "background.error.title.unreached": "Impossibile raggiungere",
+  "background.error.title.webhook.is-not-installed": "Avviso di sincronizzazione",
+  "background.error.subtitle.common": "Impossibile recuperare le impostazioni del plugin. Per favore ricarica la finestra di Pipedrive.",
+  "background.error.subtitle.token-expired": "Il token di sicurezza del documento è scaduto. Per favore ri-autorizza l'app.",
   "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile.",
   "background.error.subtitle.plugin.not-active.help": "Attendere finché un amministratore Pipedrive non configura le impostazioni dell'app",
   "background.error.subtitle.docspace-connection": "Non sei connesso a ONLYOFFICE DocSpace.",
-  "background.error.subtitle.docspace-authorization.message": "Impossibile ottenere l'autorizzazione in ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Vai alle impostazioni di autorizzazione per configurare le impostazioni dell'app ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Chiedi a un amministratore di Pipedrive di creare una stanza o contatta un amministratore di DocSpace per aggiornare il tuo ruolo.",
   "background.error.subtitle.no-room-access": "Provare a richiedere l'accesso",
   "background.error.hint.admin.docspace-connection": "Accedi alle Impostazioni di connessione per configurare le impostazioni dell'app ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "La sincronizzazione tra i follower del Deal e i membri della Room non avviene a causa di un malfunzionamento del webhook.",
   "button.reauthorize": "Riautorizza",
-  "button.settings": "",
+  "button.settings": "Vai a Impostazioni",
   "button.create.room": "Crea stanza",
   "button.login": "Login",
   "button.logout": "Esci",
@@ -30,7 +28,7 @@
   "button.cancel": "Annulla",
   "button.save": "Salva",
   "button.request-access": "Richiedi l'accesso",
-  "button.reinstall": "",
+  "button.reinstall": "Reinstalla l'app",
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace.",
   "docspace.error.login": "Autenticazione utente fallita",
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
@@ -45,31 +43,31 @@
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea la stanza ONLYOFFICE DocSpace per lavorare con i documenti relativi a questo accordo. Non sarà possibile modificare il tipo di stanza",
-  "room.login.description": "",
+  "room.login.description": "Accedi a ONLYOFFICE DocSpace per collaborare facilmente sui documenti relativi ai deal.",
   "room.request-access.ok": "L'accesso alla stanza ONLYOFFICE DocSpace è stato concesso",
   "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
   "settings.authorization.title": "Accedi all'account ONLYOFFICE DocSpace",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "Il tuo indirizzo DocSpace connesso è",
   "settings.authorization.status.authorized": "Hai effettuato l'accesso al tuo account ONLYOFFICE DocSpace con successo",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Autorizzazione",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "Impossibile raggiungere ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Chiave API DocSpace non valida, riprova",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Il proprietario della chiave API DocSpace non è un amministratore DocSpace",
   "settings.connection.saving.ok": "Le impostazioni di ONLYOFFICE DocSpace sono state salvate",
   "settings.connection.disconnection.description": "Sei sicuro di voler disconnettere ONLYOFFICE DocSpace? Questo comporterà la perdita di tutte le connessioni tra Deals e le stanze DocSpace. Inoltre, tutti i dati di autorizzazione utente saranno eliminati.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
   "settings.connection.disconnection.error": "Impossibile disconnettere ONLYOFFICE DocSpace",
   "settings.connection.title": "Configura le impostazioni di connessione dell'app ONLYOFFICE DocSpace",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Collega il tuo ONLYOFFICE DocSpace a Pipedrive",
+  "settings.connection.subtitle.change": "Cambia indirizzo o disconnetti il tuo ONLYOFFICE DocSpace da Pipedrive",
   "settings.connection.inputs.address": "Indirizzo ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.description": "",
+  "settings.connection.inputs.api-key.title": "Chiave API ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.description": "La chiave API deve essere creata da un amministratore DocSpace e deve includere i seguenti permessi: Profilo (Lettura), Contatti (Scrittura) e Stanze (Scrittura).",
   "settings.connection.menu-item": "Connessione"
 }
