--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -1,26 +1,24 @@
 {
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Что-то пошло не так",
+  "background.error.title.docspace-invalid-api-key": "Недействительный ключ API ONLYOFFICE DocSpace.",
   "background.error.title.token-expired": "Срок действия токена безопасности документа истек",
   "background.error.title.create-room": "К сожалению, у вас нет разрешения на создание комнат",
   "background.error.title.no-room-access": "К сожалению, у вас нет доступа к этой комнате",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Пока недоступно",
+  "background.error.title.unreached": "Недоступно",
+  "background.error.title.webhook.is-not-installed": "Предупреждение о синхронизации",
+  "background.error.subtitle.common": "Не удалось получить настройки плагина. Перезагрузите окно Pipedrive.",
+  "background.error.subtitle.token-expired": "Срок действия токена безопасности документа истек. Пожалуйста, авторизуйте приложение еще раз.",
   "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно.",
   "background.error.subtitle.plugin.not-active.help": "Пожалуйста, подождите, когда администратор Pipedrive настроит приложение",
   "background.error.subtitle.docspace-connection": "Вы не подключены к ONLYOFFICE DocSpace.",
-  "background.error.subtitle.docspace-authorization.message": "Не удается авторизоваться в ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Пожалуйста, перейдите к настройкам авторизации, чтобы настроить приложение",
   "background.error.subtitle.create-room": "Пожалуйста, попросите администратора Pipedrive создать комнату или свяжитесь с администратором DocSpace для обновления вашей роли.",
   "background.error.subtitle.no-room-access": "Пожалуйста, попробуйте запросить доступ",
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "Синхронизация между подписчиками сделки и участниками комнаты не происходит из-за сбоя в работе веб-хука.",
   "button.reauthorize": "Авторизуйтесь повторно",
-  "button.settings": "",
+  "button.settings": "Перейти в настройки",
   "button.create.room": "Создать комнату",
   "button.login": "Войти",
   "button.logout": "Выйти",
@@ -30,7 +28,7 @@
   "button.cancel": "Отменить",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
-    "button.reinstall": "",
+  "button.reinstall": "Переустановить приложение",
   "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен.",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
@@ -45,31 +43,31 @@
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
   "room.create.description": "Создайте комнату ONLYOFFICE DocSpace для работы с документами, связанными с этой сделкой. Вы не сможете изменить тип комнаты.",
-  "room.login.description": "",
+  "room.login.description": "Войдите в ONLYOFFICE DocSpace, чтобы легко работать над документами, связанными со сделкой.",
   "room.request-access.ok": "Вам успешно предоставлен доступ к комнате ONLYOFFICE DocSpace",
   "room.request-access.error": "Ошибка при получении доступа к комнате ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
   "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
   "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
   "settings.authorization.title": "Войти в учетную запись ONLYOFFICE DocSpace",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "Ваш подключенный адрес DocSpace:",
   "settings.authorization.status.authorized": "Вы успешно вошли в свою учетную запись ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "Электронная почта",
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace недоступен",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "DocSpace API ключ недействительный",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Неверный ключ API DocSpace, попробуйте еще раз",
   "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Владелец API ключа DocSpace не является администратором DocSpace",
   "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
   "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
   "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
   "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Подключите ваш ONLYOFFICE DocSpace к Pipedrive",
+  "settings.connection.subtitle.change": "Измените адрес или отключите свой ONLYOFFICE DocSpace от Pipedrive",
   "settings.connection.inputs.address": "Адрес ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Ключ",
-  "settings.connection.inputs.api-key.description": "Автором API ключа должен быть администратор DocSpace и ключ должен иметь права доступа (Профиль - Чтение, Контакты - Запись, Комнаты - Запись).",
+  "settings.connection.inputs.api-key.description": "Автором API ключа должен быть администратор DocSpace, и ключ должен иметь права доступа (Профиль - Чтение, Контакты - Запись, Комнаты - Запись).",
   "settings.connection.menu-item": "Соединение"
 }
