--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -1,26 +1,24 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Algo deu errado",
+  "background.error.title.docspace-invalid-api-key": "A chave de API do ONLYOFFICE DocSpace é inválida.",
   "background.error.title.token-expired": "O token de segurança do documento expirou",
   "background.error.title.create-room": "Desculpe, você não tem permissão para criar salas",
   "background.error.title.no-room-access": "Desculpe, você não tem acesso a esta sala",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Ainda não disponível",
+  "background.error.title.unreached": "Não é possível contatá-lo",
+  "background.error.title.webhook.is-not-installed": "Aviso de sincronização",
+  "background.error.subtitle.common": "Não foi possível obter as configurações do plugin. Recarregue a janela do Pipedrive.",
+  "background.error.subtitle.token-expired": "O token de segurança do documento expirou. Reautorize o aplicativo.",
   "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível.",
   "background.error.subtitle.plugin.not-active.help": "Aguarde até que um administrador do Pipedrive configure as configurações do aplicativo",
   "background.error.subtitle.docspace-connection": "Você não está conectado ao ONLYOFFICE DocSpace.",
-  "background.error.subtitle.docspace-authorization.message": "Não é possível obter autorização no ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Vá para a Configuração de autorização para configurar as configurações do aplicativo ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Peça a um administrador do Pipedrive para criar uma sala ou entre em contato com um administrador do DocSpace para atualizar sua função.",
   "background.error.subtitle.no-room-access": "Por favor, tente solicitar acesso",
   "background.error.hint.admin.docspace-connection": "Por favor, vá para a Configuração de conexão para configurar as configurações do aplicativo ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "A sincronização entre os seguidores do Deal e os membros da Sala não está ocorrendo devido a um mau funcionamento do webhook.",
   "button.reauthorize": "Reautorizar",
-  "button.settings": "",
+  "button.settings": "Acesse Configurações",
   "button.create.room": "Criar sala",
   "button.login": "Login",
   "button.logout": "Sair",
@@ -30,7 +28,7 @@
   "button.cancel": "Cancelar",
   "button.save": "Salvar",
   "button.request-access": "Solicitar acesso",
-  "button.reinstall": "",
+  "button.reinstall": "Reinstale o aplicativo",
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado.",
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
@@ -45,31 +43,31 @@
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
   "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para trabalhar com documentos relacionados a este negócio. Você não poderá alterar o tipo de sala.",
-  "room.login.description": "",
+  "room.login.description": "Faça login no ONLYOFFICE DocSpace para colaborar facilmente nos documentos relacionados ao Deal.",
   "room.request-access.ok": "Você obteve acesso com sucesso à sala do ONLYOFFICE DocSpace",
   "room.request-access.error": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "A autorização do ONLYOFFICE DocSpace foi excluída com sucesso",
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
   "settings.authorization.title": "Faça login na conta do ONLYOFFICE DocSpace",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "Seu endereço do DocSpace conectado é",
   "settings.authorization.status.authorized": "Você fez login com sucesso na sua conta do ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Senha",
   "settings.authorization.menu-item": "Autorização",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace não pode ser contatado",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Chave de API do DocSpace inválida. Tente novamente.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "O proprietário da chave de API do DocSpace não é um administrador do DocSpace.",
   "settings.connection.saving.ok": "As configurações do ONLYOFFICE DocSpace foram salvas",
   "settings.connection.disconnection.description": "Tem certeza de que deseja desconectar ONLYOFFICE DocSpace? Isso resultará na perda de todas as conexões entre as salas Deals e DocSpace. E também todos os dados de autorização do usuário serão excluídos.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace desconectado com sucesso",
   "settings.connection.disconnection.error": "Não foi possível desconectar o ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar as configurações de conexão do aplicativo ONLYOFFICE DocSpace",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Conecte seu ONLYOFFICE DocSpace ao Pipedrive.",
+  "settings.connection.subtitle.change": "Altere o endereço ou desconecte seu ONLYOFFICE DocSpace do Pipedrive.",
   "settings.connection.inputs.address": "Endereço do ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.description": "",
+  "settings.connection.inputs.api-key.title": "Chave de API do ONLYOFFICE DocSpace.",
+  "settings.connection.inputs.api-key.description": "A chave de API deve ser criada por um administrador do DocSpace e deve incluir os seguintes escopos de acesso: Perfil (Leitura), Contatos (Escrita) e Salas (Escrita).",
   "settings.connection.menu-item": "Conexão"
 }
