--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -1,14 +1,14 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Da ist etwas schiefgelaufen",
+  "background.error.title.docspace-invalid-api-key": "Der ONLYOFFICE DocSpace API-Schlüssel ist ungültig.",
   "background.error.title.token-expired": "Das Sicherheits-Token des Dokuments ist abgelaufen",
   "background.error.title.create-room": "Sie haben leider keine Berechtigung zum Erstellen von Räumen",
   "background.error.title.no-room-access": "Sie haben leider keinen Zugang zu diesem Raum",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Noch nicht verfügbar",
+  "background.error.title.unreached": "Nicht erreichbar",
+  "background.error.title.webhook.is-not-installed": "Warnung zur Synchronisierung",
+  "background.error.subtitle.common": "Die Plugin-Einstellungen konnten nicht abgerufen werden. Bitte laden Sie das Pipedrive-Fenster neu.",
+  "background.error.subtitle.token-expired": "Das Sicherheitstoken des Dokuments ist abgelaufen. Bitte autorisieren Sie die App erneut.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar.",
   "background.error.subtitle.plugin.not-active.help": "Bitte warten Sie, bis ein Pipedrive-Administrator die App-Einstellungen konfiguriert hat",
   "background.error.subtitle.docspace-connection": "Es besteht keine Verbindung zu ONLYOFFICE DocSpace.",
@@ -16,9 +16,9 @@
   "background.error.subtitle.no-room-access": "Bitte versuchen Sie, Zugang zu beantragen",
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "Die Synchronisierung zwischen Deal-Followern und Raummitgliedern findet aufgrund einer Webhook-Fehlfunktion nicht statt.",
   "button.reauthorize": "Erneut autorisieren",
-  "button.settings": "",
+  "button.settings": "Einstellungen öffnen",
   "button.create.room": "Raum erstellen",
   "button.login": "Anmelden",
   "button.logout": "Abmelden",
@@ -27,7 +27,7 @@
   "button.change": "Ändern",
   "button.cancel": "Abbrechen",
   "button.save": "Speichern",
-  "button.reinstall": "",
+  "button.reinstall": "App neu installieren",
   "button.request-access": "Zugang beantragen",
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar.",
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
@@ -43,31 +43,31 @@
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die mit diesem Deal verbunden sind. Sie können den Raumtyp nicht ändern.",
-  "room.login.description": "",
+  "room.login.description": "Melden Sie sich bei ONLYOFFICE DocSpace an, um gemeinsam an den Deal-Dokumenten zu arbeiten.",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
   "settings.authorization.title": "Anmeldung beim ONLYOFFICE DocSpace-Konto",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "Ihre verbundene DocSpace-Adresse ist",
   "settings.authorization.status.authorized": "Sie haben sich erfolgreich bei Ihrem ONLYOFFICE DocSpace-Konto angemeldet.",
   "settings.authorization.inputs.email": "E-Mail",
   "settings.authorization.inputs.password": "Passwort",
   "settings.authorization.menu-item": "Autorisierung",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace ist nicht erreichbar",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Ungültiger DocSpace-API-Schlüssel. Bitte versuchen Sie es erneut.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Der Besitzer des DocSpace-API-Schlüssels ist kein DocSpace-Administrator",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace-Einstellungen wurden gespeichert",
   "settings.connection.disconnection.description": "Sind Sie sicher, dass Sie die Verbindung zu ONLYOFFICE DocSpace unterbrechen wollen? Dies hat zur Folge, dass alle Verbindungen zwischen Deals und DocSpace-Räumen verloren gehen. Außerdem werden alle Benutzerautorisierungsdaten gelöscht.",
   "settings.connection.disconnection.ok": "Verbindung zu ONLYOFFICE DocSpace erfolgreich unterbrochen",
   "settings.connection.disconnection.error": "Die Verbindung zu ONLYOFFICE DocSpace konnte nicht unterbrochen werden.",
   "settings.connection.title": "Konfigurieren Sie die Verbindungseinstellungen der ONLYOFFICE DocSpace-App",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Verbinden Sie Ihren ONLYOFFICE DocSpace mit Pipedrive",
+  "settings.connection.subtitle.change": "Ändern Sie die Adresse oder trennen Sie Ihren ONLYOFFICE DocSpace von Pipedrive",
   "settings.connection.inputs.address": "Adresse von ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.description": "",
+  "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API-Schlüssel",
+  "settings.connection.inputs.api-key.description": "Der API-Schlüssel muss von einem DocSpace-Administrator erstellt werden und sollte die folgenden Zugriffsbereiche umfassen: Profil (Lesen), Kontakte (Schreiben) und Räume (Schreiben).",
   "settings.connection.menu-item": "Verbindung"
 }
