--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -1,26 +1,24 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "問題が発生しました",
+  "background.error.title.docspace-invalid-api-key": "ONLYOFFICE DocSpaceのAPIキーが無効です。",
   "background.error.title.token-expired": "ドキュメントのセキュリティトークンが期限切れです",
   "background.error.title.create-room": "申し訳ありませんが、ルームを作成する権限がありません",
   "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "",
+  "background.error.title.not-available": "まだご利用いただけません",
+  "background.error.title.unreached": "接続できません",
+  "background.error.title.webhook.is-not-installed": "同期警告",
+  "background.error.subtitle.common": "プラグインの設定を取得できませんでした。Pipedriveウィンドウを再読み込みしてください。",
+  "background.error.subtitle.token-expired": "ドキュメントのセキュリティトークンが期限切れです。アプリを再認証してください。",
+  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpaceアプリはまだ利用できません。",
   "background.error.subtitle.plugin.not-active.help": "Pipedrive 管理者によってアプリ設定が構成されるまでお待ちください",
-  "background.error.subtitle.docspace-connection": "",
-  "background.error.subtitle.docspace-authorization.message": "ONLYOFFICE DocSpace で承認を取得できません",
-  "background.error.subtitle.docspace-authorization.help": "ONLYOFFICE DocSpace アプリの設定を構成するには、承認設定に移動してください",
+  "background.error.subtitle.docspace-connection": "ONLYOFFICE DocSpaceに接続していません。",
   "background.error.subtitle.create-room": "ルームを作成するには、Pipedrive 管理者にお問い合わせいただくか、または、ロールをアップグレードするには、DocSpace 管理にお問い合わせください。",
   "background.error.subtitle.no-room-access": "アクセスをリクエストしてください",
   "background.error.hint.admin.docspace-connection": "ONLYOFFICE DocSpace アプリの設定を行うには、接続設定に移動してください。",
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
-  "background.error.hint.webhook.is-not-installed": "",
+  "background.error.hint.webhook.is-not-installed": "Webhookの誤動作により、取引フォロワーとルームメンバー間の同期が行われていません。",
   "button.reauthorize": "再認証",
-  "button.settings": "",
+  "button.settings": "設定に移動",
   "button.create.room": "ルームの作成",
   "button.login": "ログイン",
   "button.logout": "ログアウト",
@@ -30,8 +28,8 @@
   "button.cancel": "キャンセル",
   "button.save": "保存",
   "button.request-access": "アクセスをリクエストする",
-  "button.reinstall": "",
-  "docspace.error.unreached": "",
+  "button.reinstall": "アプリを再インストール",
+  "docspace.error.unreached": "ONLYOFFICE DocSpaceに接続できません",
   "docspace.error.login": "ユーザー認証に失敗しました",
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
   "docspace.error.payment": "現在ご契約中のプランのルーム数が上限に達しているため、このルームの作成はできません。",
@@ -45,31 +43,31 @@
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件に関連するドキュメントを扱うためにONLYOFFICE DocSpaceルームを作成してください。ルームタイプを変更することはできませんので、ご注意ください。",
-  "room.login.description": "",
+  "room.login.description": "ONLYOFFICE DocSpaceにログインして、取引関連のドキュメントを簡単に共同編集できます。",
   "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
   "settings.authorization.title": "ONLYOFFICE DocSpaceアカウントにログイン",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.subtitle.address": "接続されたDocSpaceアドレス：",
   "settings.authorization.status.authorized": "ONLYOFFICE DocSpaceアカウントに正常にログインしました",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "パスワード",
   "settings.authorization.menu-item": "認証",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpaceに接続できません",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "DocSpaceのAPIキーが無効です。もう一度お試しください。",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "DocSpaceのAPIキーの所有者はDocSpace管理者ではありません",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace設定が保存されました",
   "settings.connection.disconnection.description": "ONLYOFFICE DocSpaceの接続を切断してもよろしいですか? これは、DealsとDocSpaceルーム間のすべての接続が失われることを意味します。また、すべてのユーザー認証データも削除されます。",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpaceの切断に成功しました",
   "settings.connection.disconnection.error": "ONLYOFFICE DocSpaceの切断に失敗しました",
   "settings.connection.title": "ONLYOFFICE DocSpaceアプリの接続設定を確認してください",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "ONLYOFFICE DocSpaceをPipedriveに接続してください",
+  "settings.connection.subtitle.change": "アドレスを変更するか、ONLYOFFICE DocSpaceをPipedriveから切断してください",
   "settings.connection.inputs.address": "ONLYOFFICE DocSpaceアドレス",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.description": "",
+  "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpaceのAPIキー",
+  "settings.connection.inputs.api-key.description": "APIキーはDocSpace管理者によって作成され、次のアクセス範囲を含む必要があります：プロフィール（読み取り）、連絡先（書き込み）、およびルーム（書き込み）。",
   "settings.connection.menu-item": "接続"
 }
